- Fixed: Crash report is not discarded when 'Close the program' is selected (issue 94).
- Fixed: Application is restarted twice after crash (issue 115).
- Fixed: CRP_COL_PROBLEM_DESCRIPTION not working (issue 118).
- Fixed: Improve robustness to stack overflow (issue 121).
- Fixed: When copying a log file into the crash archive, access it with FILE_SHARE_WRITE (issue 124)

--- Ver. 1.3.0 ---

- Added support of CMake - cross-plaform make system. Although CrashRpt doesn't support operating systems
  other than Windows, CMake makes it easier to maintain build configurations for different versions of Visual Studio.
  Project files for VC++ .NET 2003, 2005, 2008, 2010 and VC++ Express can be generated.

- Added instructions to the documentation on how to generate Visual Studio project files with CMake.

- Removed project files for Visual Studio 2003 (CrashRpt_v2003.sln) and Visual Studio 2005 (CrashRpt_v2005.sln). 
  To compile in VS2010, use Visual Studio 2010 project files (or use CMake to generate Visual Studio project 
  files for your favorite version of Visual Studio).

- Binary files now have version suffices (CrashRpt1300.dll, CrashRptProbe1300.dll and CrashSender1300.exe). This is
  to resolve problems of loading incorrect version of the DLL.

- Removed obsolete API InstallW, InstallA, Uninstall, AddFileW, AddFileA, GenerateErrorReport.

- Added an ability to select/deselect/delete all error reports and delete selected reports in ResendDlg (issue 112).

- Updated Italian lang file (issue 92).
- Updated German lang file (issue 98).
- Updated French lang file (issue 107).

- Fixed: CrashSender fails to initialize if two files both have empty destination properties (issue 88)
- Fixed: DestroyView fails in SharedMem implementation (issue 93)
- Fixed: CHttpRequestSender::InternalSend() sends bad request header (issue 95)
- Fixed: Potential buffer overflow in CHttpRequestSender::InternalSend() (issue 96)
- Fixed: Formatting / coding request (issue 97)